category to notes
