# src/models/Note.ts
@@ -33,6 +33,9 @@ export class Note extends Model<
   @Attribute(DataTypes.TEXT)
   declare description: string | null;
 
+  @Attribute(DataTypes.TIME)
+  declare category: string | null;
+
   @Attribute(DataTypes.INTEGER)
   @NotNull
   declare createdBy: number;
