# src/validators/note-validators.ts
@@ -4,6 +4,7 @@ import { z } from "zod";
 export const createNoteSchema = z.object({
   title: z.string().min(3, "Title must be at least 3 characters long"),
   description: z.string().optional().nullable(),
+  category: z.string().optional().nullable(),
 });
 export type createNoteType = z.infer<typeof createNoteSchema>;
 
@@ -11,6 +12,7 @@ export type createNoteType = z.infer<typeof createNoteSchema>;
 export const updateNoteSchema = z.object({
   title: z.string().min(3, "Title must be at least 3 characters long"),
   description: z.string().optional().nullable(),
+  category: z.string().optional().nullable(),
 });
 export type updateNoteType = z.infer<typeof updateNoteSchema>;
 
